--- a/CPS_client/bin/CPS/View/InAdvanceCustomer.fxml
+++ b/CPS_client/bin/CPS/View/InAdvanceCustomer.fxml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
@@ -11,7 +15,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="500.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="CPS.View.PersonViewController">
+<AnchorPane prefHeight="500.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="CPS.View.PersonViewController">
     <children>
         <Label layoutX="36.0" layoutY="379.0" prefHeight="17.0" prefWidth="114.0" text="payment method:" />
         <Label layoutX="37.0" layoutY="214.0" prefHeight="17.0" prefWidth="52.0" text="email:" />
@@ -29,7 +33,7 @@
             </font>
         </Label>
         <Button fx:id="In_Advance_Customer_back_btn" layoutX="21.0" layoutY="458.0" mnemonicParsing="false" onAction="#In_Advance_Customer_back" prefHeight="27.0" prefWidth="82.0" text="&lt;&lt; back" />
-        <Button fx:id="In_Advance_Customer_order" layoutX="171.0" layoutY="457.0" mnemonicParsing="false" onAction="#In_Advance_Customer__Order" prefHeight="25.0" prefWidth="149.0" text="Order" />
+        <Button fx:id="In_Advance_Customer_order" layoutX="171.0" layoutY="457.0" mnemonicParsing="false" onAction="#In_Advance_Customer_Order" prefHeight="25.0" prefWidth="149.0" text="Order" />
         <DatePicker fx:id="In_Advance_Customer_start_date" layoutX="156.0" layoutY="293.0" prefHeight="27.0" prefWidth="167.0" promptText="Choose Date" />
         <Label layoutX="37.0" layoutY="297.0" prefHeight="17.0" prefWidth="93.0" text="start date:" />
         <TextField fx:id="In_Advance_Customer_start_time" layoutX="344.0" layoutY="293.0" prefHeight="27.0" prefWidth="127.0" promptText="hh:mm" />
@@ -40,9 +44,12 @@
         <Label layoutX="36.0" layoutY="121.0" text="last name:" />
         <TextField fx:id="In_Advance_Customer_phone_number" layoutX="156.0" layoutY="148.0" promptText="phone number:" />
         <Label layoutX="35.0" layoutY="152.0" text="phone number:" />
-        <RadioButton layoutX="156.0" layoutY="379.0" mnemonicParsing="false" text="cash" />
-        <RadioButton layoutX="223.0" layoutY="379.0" mnemonicParsing="false" text="credit card" />
-        <SplitMenuButton layoutX="156.0" layoutY="250.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="167.0" text="available lots">
+        <RadioButton layoutX="156.0" layoutY="379.0" mnemonicParsing="false" text="cash">
+         <toggleGroup>
+            <ToggleGroup fx:id="money_toggle" />
+         </toggleGroup></RadioButton>
+        <RadioButton layoutX="223.0" layoutY="379.0" mnemonicParsing="false" text="credit card" toggleGroup="$money_toggle" />
+        <SplitMenuButton fx:id="In_Advance_Customer_parking_lot_split_menu_btn" layoutX="156.0" layoutY="250.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="167.0" text="available lots">
             <items>
                 <MenuItem mnemonicParsing="false" text="Action 1" />
                 <MenuItem mnemonicParsing="false" text="Action 2" />
