--- a/CPS_client/bin/CPS/View/CustomerSignUp.fxml
+++ b/CPS_client/bin/CPS/View/CustomerSignUp.fxml
@@ -9,28 +9,28 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="CPS.View.PersonViewController">
    <children>
-      <Label layoutX="114.0" layoutY="291.0" prefHeight="17.0" prefWidth="101.0" text="starting date:" />
-      <Label layoutX="115.0" layoutY="187.0" prefHeight="17.0" prefWidth="52.0" text="email:" />
-      <Label layoutX="115.0" layoutY="119.0" text="id:" />
-      <Label layoutX="114.0" layoutY="221.0" text="car number:" />
-      <TextField fx:id="customer_sign_up_email" layoutX="223.0" layoutY="183.0" promptText="email:" />
-      <TextField fx:id="customer_sign_up_id" layoutX="223.0" layoutY="116.0" promptText="id:" />
-      <TextField fx:id="customer_sign_up_car_number" layoutX="223.0" layoutY="217.0" promptText="car number:" />
+      <Label layoutX="114.0" layoutY="291.0" prefHeight="17.0" prefWidth="101.0" text="Starting date:" />
+      <Label layoutX="115.0" layoutY="187.0" prefHeight="17.0" prefWidth="52.0" text="Email:" />
+      <Label layoutX="115.0" layoutY="119.0" text="ID:" />
+      <Label layoutX="114.0" layoutY="221.0" text="Car number:" />
+      <TextField fx:id="customer_sign_up_email" layoutX="223.0" layoutY="183.0" promptText="Email" />
+      <TextField fx:id="customer_sign_up_id" layoutX="223.0" layoutY="116.0" promptText="ID" />
+      <TextField fx:id="customer_sign_up_car_number" layoutX="223.0" layoutY="217.0" promptText="Car number" />
       <Button fx:id="customer_sign_up_sign_up_btn" layoutX="223.0" layoutY="355.0" mnemonicParsing="false" onAction="#Customer_Sign_up_Sign_up" prefHeight="25.0" prefWidth="149.0" text="Sign up" />
-      <Button fx:id="customer_sign_up_back_btn" layoutX="16.0" layoutY="358.0" mnemonicParsing="false" onAction="#Customer_Sign_up_Sign_up_back" prefHeight="27.0" prefWidth="75.0" text="&lt;&lt; back" />
+      <Button fx:id="customer_sign_up_back_btn" layoutX="16.0" layoutY="358.0" mnemonicParsing="false" onAction="#Customer_Sign_up_Sign_up_back" prefHeight="27.0" prefWidth="85.0" text="&lt;&lt; back" />
       <DatePicker fx:id="customer_sign_up_date_picker" layoutX="223.0" layoutY="288.0" prefHeight="25.0" prefWidth="149.0" />
-      <Label layoutX="87.0" layoutY="19.0" text="please provide the following requirements:" underline="true">
+      <Label layoutX="87.0" layoutY="19.0" text="Sign-up: please fill in the following:" underline="true">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
       <TextField fx:id="customer_sign_up_first_name" layoutX="223.0" layoutY="60.0" promptText="Name" />
-      <Label layoutX="115.0" layoutY="64.0" text="first name:" />
-      <Label layoutX="115.0" layoutY="92.0" text="last name:" />
-      <Label layoutX="115.0" layoutY="255.0" text="phone number" />
+      <Label layoutX="115.0" layoutY="64.0" text="First name:" />
+      <Label layoutX="115.0" layoutY="92.0" text="Last name:" />
+      <Label layoutX="115.0" layoutY="255.0" text="Phone number:" />
       <TextField fx:id="customer_sign_up_last_name" layoutX="223.0" layoutY="88.0" promptText="Last name" />
       <TextField fx:id="customer_sign_up_phone_number" layoutX="224.0" layoutY="250.0" promptText="Phone number" />
       <TextField fx:id="customer_sign_up_password" layoutX="223.0" layoutY="149.0" promptText="Password" />
-      <Label layoutX="115.0" layoutY="153.0" text="password:" />
+      <Label layoutX="115.0" layoutY="153.0" text="Password:" />
    </children>
 </AnchorPane>
