--- a/CPS_client/src/CPS/View/OccasionalCustomer.fxml
+++ b/CPS_client/src/CPS/View/OccasionalCustomer.fxml
@@ -28,10 +28,10 @@
       <Label layoutX="76.0" layoutY="36.0" />
       <Label layoutX="80.0" layoutY="80.0" text="car number:" />
       <Label layoutX="80.0" layoutY="49.0" text="id:" />
-      <Label layoutX="80.0" layoutY="121.0" prefHeight="17.0" prefWidth="80.0" text="parking lot:" />
-      <Label layoutX="80.0" layoutY="164.0" prefHeight="17.0" prefWidth="52.0" text="email:" />
-      <Label layoutX="80.0" layoutY="205.0" prefHeight="17.0" prefWidth="74.0" text="end date:" />
-      <Label layoutX="80.0" layoutY="241.0" prefHeight="17.0" prefWidth="74.0" text="end time" />
+      <Label layoutX="80.0" layoutY="121.0" prefHeight="17.0" prefWidth="80.0" text="Parking lot:" />
+      <Label layoutX="80.0" layoutY="164.0" prefHeight="17.0" prefWidth="52.0" text="Email:" />
+      <Label layoutX="80.0" layoutY="205.0" prefHeight="17.0" prefWidth="74.0" text="End date:" />
+      <Label layoutX="80.0" layoutY="241.0" prefHeight="17.0" prefWidth="74.0" text="End time" />
       <SplitMenuButton fx:id="Occasional_Customer_parking_lot_btn" layoutX="176.0" layoutY="117.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="149.0" text="Select">
         <items>
           <MenuItem mnemonicParsing="false" text="Action 1" />
