--- a/CPS_client/src/CPS/View/OccasionalCustomer.fxml
+++ b/CPS_client/src/CPS/View/OccasionalCustomer.fxml
@@ -38,5 +38,12 @@
           <MenuItem mnemonicParsing="false" text="Action 2" />
         </items>
       </SplitMenuButton>
+      <RadioButton fx:id="Occasional_Customer_cash" layoutX="191.0" layoutY="274.0" mnemonicParsing="false" text="cash">
+         <toggleGroup>
+            <ToggleGroup fx:id="money_toggle2" />
+         </toggleGroup>
+      </RadioButton>
+      <Label layoutX="71.0" layoutY="274.0" prefHeight="17.0" prefWidth="114.0" text="payment method:" />
+      <RadioButton fx:id="Occasional_Customer_credit_card" layoutX="247.0" layoutY="274.0" mnemonicParsing="false" text="credit card" toggleGroup="$money_toggle2" />
    </children>
 </AnchorPane>
